gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-doc_spotlight.rs
#[doc(spotlight)] // { dg-error ".E0658." "" { target *-*-* } }
trait SomeTrait {}

fn main() {}

